# MTProtoClient

./: CMakeLists.txt  README.md
Sources/: binary_stream.cpp  buffer.cpp  buffer.h  byteswap.h  dh.h  dh_handshake.h  gzip.cpp  gzip.h  main.cpp  mtproto_client  mtproto_objects.h  mtproto_session_type.cpp  rsa_key.cpp  session.h  singletone.h  tcp.cpp  tcp.h  tl_packet.h
Sources/details/: brent.cpp
